# ProsusMoney

./: .gitignore  BUILD.MD  BUILD.md  CMakeLists.txt  CryptoNoteWallet.cmake  QREncode.cmake  README.md
cli/: CMakeLists.txt
cli/include/: genesisBlocks.h
cli/src/: CMakeLists.txt  CryptoNoteConfig.h  version.h.in
cli/src/Common/: Util.cpp
cli/src/CryptoNoteCore/: Blockchain.cpp  Blockchain.h  Core.cpp  Currency.cpp  Currency.h  ICore.h  Miner.cpp
cli/src/CryptoNoteProtocol/: CryptoNoteProtocolHandler.cpp
cli/src/Daemon/: Daemon.cpp  DaemonCommandsHandler.cpp
cli/src/P2p/: NetNode.cpp
cli/src/Platform/Windows/System/: Dispatcher.cpp
cli/src/Serialization/: SerializationOverloads.cpp
cli/src/Wallet/: WalletGreen.h  WalletRpcServer.cpp
cli/src/WalletLegacy/: WalletLegacy.h
cryptonote/: CMakeLists.txt
cryptonote/include/: IWalletLegacy.h
cryptonote/src/: CMakeLists.txt  CryptoNoteConfig.h  version.h.in
cryptonote/src/BlockchainExplorer/: BlockchainExplorer.cpp  BlockchainExplorerDataBuilder.cpp
cryptonote/src/CryptoNoteCore/: Blockchain.cpp  Core.cpp  Core.h  Currency.cpp  Currency.h  Difficulty.cpp  ICore.h  VerificationContext.h
cryptonote/src/CryptoNoteProtocol/: CryptoNoteProtocolHandler.cpp
cryptonote/src/Daemon/: Daemon.cpp  genesisBlockindexes.h
cryptonote/src/P2p/: P2pNetworks.h
cryptonote/src/Rpc/: RpcServer.cpp
cryptonote/src/SimpleWallet/: SimpleWallet.h
cryptonote/src/WalletLegacy/: WalletLegacy.cpp
src/: AddressProvider.cpp  AddressProvider.h  CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  CryptoNoteConfig.h  CryptoNoteWrapper.cpp  CryptoNoteWrapper.h  CurrencyAdapter.cpp  CurrencyAdapter.h  DnsLookup.cpp  DnsLookup.h  LoggerAdapter.cpp  LoggerAdapter.h  Miner.cpp  Miner.h  NodeAdapter.cpp  NodeAdapter.h  PaymentServer.cpp  PaymentServer.h  QREncode.cmake  Settings.cpp  Settings.h  SignalHandler.cpp  SignalHandler.h  StratumClient.cpp  StratumClient.h  Update.cpp  Update.h  WalletAdapter.cpp  WalletAdapter.h  Worker.cpp  Worker.h  cryptonotewallet.rc  default.qss  main.cpp  miniupnpcstrings.h  parsicoinwallet.desktop  prosus.desktop  resources.qrc  (+2 more)
src/Common/: Util.cpp
src/CryptoNoteCore/: Core.cpp  CryptoNoteFormatUtils.cpp  CryptoNoteFormatUtils.h  Currency.cpp  Difficulty.cpp  Difficulty.h
src/CryptoNoteProtocol/: CryptoNoteProtocolHandler.cpp
src/HTTP/: HttpResponse.cpp
src/InProcessNode/: InProcessNode.cpp
src/PaymentGateService/: PaymentServiceConfiguration.h
src/Rpc/: CoreRpcServerCommandsDefinitions.h
src/WalletLegacy/: WalletTransactionSender.cpp  WalletTransactionSender.h
src/crypto/: hash-ops.h  hash.h  slow-hash.c  slow-hash.cpp  tree-hash.c
src/gui/: AboutDialog.cpp  AboutDialog.h  AccountFrame.cpp  AccountFrame.h  AddressBookDialog.cpp  AddressBookDialog.h  AddressBookFrame.cpp  AddressBookFrame.h  AddressBookModel.cpp  AddressBookModel.h  AnimatedLabel.cpp  AnimatedLabel.h  ChangeLanguageDialog.cpp  ChangeLanguageDialog.h  ChangePasswordDialog.cpp  ChangePasswordDialog.h  ConfirmSendDialog.cpp  ConfirmSendDialog.h  ConnectionSettings.cpp  ConnectionSettings.h  ExitWidget.cpp  ExitWidget.h  ExportTrackingKeyDialog.cpp  ExportTrackingKeyDialog.h  FileDownloadFrame.cpp  FileDownloadFrame.h  GlassFrame.cpp  GlassFrame.h  ImportKeyDialog.cpp  ImportKeyDialog.h  ImportTrackingKeyDialog.cpp  ImportTrackingKeyDialog.h  InfoDialog.cpp  InfoDialog.h  MainWindow.cpp  MainWindow.h  MainWindow.mm  MiningFrame.cpp  MiningFrame.h  MnemonicSeedDialog.cpp  (+58 more)
src/gui/ui/: aboutdialog.ui  accountframe.ui  changelanguagedialog.ui  confirmsenddialog.ui  connectionsettingsdialog.ui  filedownloadframe.ui  mainwindow.ui  newnodedialog.ui  overviewframe.ui  receiveframe.ui  sendframe.ui  transactionsframe.ui  transferframe.ui
src/languages/: be.ts  de.ts  es.qm  es.ts  fr.qm  fr.ts  pl.ts  qt_be.qm  qt_de.qm  qt_es.qm  qt_pl.qm  ru.qm  ru.ts  uk.qm  uk.ts
src/libqrencode/: TODO
